AC_INIT(MVC.h)
AC_CONFIG_AUX_DIR(config)

dnl Set the default prefix assuming we're going to be a package used
dnl by some other package. If this is true, we'll live in a subdirectory
dnl of that package.
AC_PREFIX_DEFAULT(`pwd`/..)

AC_CANONICAL_HOST

AC_ARG_ENABLE(depend,
[  --enable-depend        Generate include file dependencies (mainly for developers)],
gen_depend=yes,gen_depend=no)

AC_ARG_ENABLE(debug,
[  --enable-debug         Generate debugging information during compilation.],
enable_debug=yes,enable_debug=no)

AC_ARG_ENABLE(purify,
[  --enable-purify        "Purify" the object code. (For debugging)],
enable_purify=yes,enable_purify=no)

AC_SUBST(gen_depend)
AC_SUBST(enable_debug)
AC_SUBST(enable_purify)

AC_OUTPUT(makefile)

